se agrega footer al doc index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <header>
         <h1>titulo</h1>
     </header>
+
+    <footer>
+        <p>Sitio web desarrollado por Felipe Rodriguez</p>
+    </footer>
 </body>
 </html>
