--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <section id="seccion1">
             <h2>subtitulo primera sección</h2>
         </section>
+        <section id="seccion1">
+            <h2>subtitulo segunda sección</h2>
+        </section>
+        <section id="seccion1">
+            <h2>subtitulo tercera sección</h2>
+        </section>
     </main>
 
 
